--- a/src/html/parts/profile-gallery-entry.html
+++ b/src/html/parts/profile-gallery-entry.html
@@ -7,4 +7,8 @@
     <div class="date">@@published</div>
     <div class="size">@@size</div>
     <div class="price">@@price₽</div>
+    <div class="actions">
+        <a href="" class="edit"><i class="mdi mdi-pen"></i></a>
+        <a href="" class="publish-indicator inactive"><i></i></a>
+    </div>
 </div>
