--- a/src/html/parts/gallery-entry-catalog.html
+++ b/src/html/parts/gallery-entry-catalog.html
@@ -39,6 +39,7 @@
                 @@if(liked==false){
                     <a href=""><i class="mdi mdi-heart-outline"></i></a>
                 }
+                <a href=""><i class="mdi mdi-message-outline"></i></a>
             </div>
         </div>
     </div>
