--- a/src/html/parts/gallery-entry-main.html
+++ b/src/html/parts/gallery-entry-main.html
@@ -36,6 +36,7 @@
                 @@if(liked==false){
                     <a href=""><i class="mdi mdi-heart-outline"></i></a>
                 }
+                <a href=""><i class="mdi mdi-message-outline"></i></a>
             </div>
         </div>
         <a href="/product.html">
