--- a/release/gallery.html
+++ b/release/gallery.html
@@ -81,7 +81,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col s12">
-                        <h1>Галерея</h1>
+                        <h1 class="page-header">Галерея</h1>
                     </div>
                     <div class="col s12">
                         <form class="filters">
