--- a/release/18_debug.html
+++ b/release/18_debug.html
@@ -33,7 +33,7 @@
 
 <script type="text/javascript" src="/js/ignore/jquery.min.js"></script>
 <script type="text/javascript" src="/js/ignore/jquery-ui.min.js"></script>
-<script type="text/javascript" src="/js/ignore/jquery.rs.adminignore.js"></script>
+<script type="text/javascript" src="/js/ignore/jquery.rs.admindebug.js"></script>
 <script type="text/javascript" src="/js/ignore/corelang.js"></script>
 <script type="text/javascript" src="/js/ignore/cropper.js"></script>
 <script type="text/javascript" src="/js/ignore/bootstrap.min.js"></script>
@@ -51,7 +51,7 @@
 <script type="text/javascript" src="/js/ignore/rs.theme.js"></script>
 <script type="text/javascript" src="/js/ignore/jquery.dialogoptions.js"></script>
 <script type="text/javascript" src="/js/ignore/jquery.datetimeaddon.min.js"></script>
-<script type="text/javascript" src="/js/ignore/jquery.rs.ignore.js"></script>
+<script type="text/javascript" src="/js/ignore/jquery.rs.debug.js"></script>
 <script type="text/javascript" src="/js/ignore/jquery.rs.ormobject.js"></script>
 <script type="text/javascript" src="/js/ignore/jquery.tour.engine.js"></script>
 <script type="text/javascript" src="/js/ignore/jquery.tour.js"></script>
@@ -295,9 +295,6 @@
                 <div>
                     <i class="mdi mdi-rotate-right"></i>
                     <input type="range" min="-180" max="180" step="10" id="image-degree">
-                    <span class="thumb">
-                        <span class="value">20</span>
-                    </span>
                 </div>
                 <div class="manual-rotate center-align">
                     <a id="rotate-left" class="btn btn-flat"><i class="mdi mdi-rotate-left gold-text"></i></a>
