--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -27,21 +27,21 @@
                         </div>
                         <div class="col m6 s12">
                             <div class="input-field">
-                                <input type="text" placeholder="Имя, Фамилия">
+                                <input type="text" class="styled" placeholder="Имя, Фамилия">
                                 <div class="error">Недопустимые символы в имени</div>
                                 <label for="">Пожалуйста представьтесь</label>
                             </div>
                         </div>
                         <div class="col m6 s12">
                             <div class="input-field">
-                                <input type="text" placeholder="+7 123 456-7890">
+                                <input type="text" class="styled" placeholder="+7 123 456-7890">
                                 <div class="error">Неверный формат</div>
                                 <label for="">Телефон</label>
                             </div>
                         </div>
                         <div class="col s12">
                             <div class="input-field">
-                                <textarea name="" id="" cols="30" rows="0" placeholder="Что Вас интересует?"></textarea>
+                                <textarea name="" class="styled" id="" cols="30" rows="0" placeholder="Что Вас интересует?"></textarea>
                                 <div class="error">Поле не должно быть пустым</div>
                                 <label for="">Сообщение</label>
                             </div>
