--- a/release/gallery.html
+++ b/release/gallery.html
@@ -1500,21 +1500,21 @@
                         </div>
                         <div class="col m6 s12">
                             <div class="input-field">
-                                <input type="text" placeholder="Имя, Фамилия">
+                                <input type="text" class="styled" placeholder="Имя, Фамилия">
                                 <div class="error">Недопустимые символы в имени</div>
                                 <label for="">Пожалуйста представьтесь</label>
                             </div>
                         </div>
                         <div class="col m6 s12">
                             <div class="input-field">
-                                <input type="text" placeholder="+7 123 456-7890">
+                                <input type="text" class="styled" placeholder="+7 123 456-7890">
                                 <div class="error">Неверный формат</div>
                                 <label for="">Телефон</label>
                             </div>
                         </div>
                         <div class="col s12">
                             <div class="input-field">
-                                <textarea name="" id="" cols="30" rows="0" placeholder="Что Вас интересует?"></textarea>
+                                <textarea name="" class="styled" id="" cols="30" rows="0" placeholder="Что Вас интересует?"></textarea>
                                 <div class="error">Поле не должно быть пустым</div>
                                 <label for="">Сообщение</label>
                             </div>
@@ -1539,6 +1539,7 @@
 </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="/js/materialize.min.js"></script>
+<script src="/js/autosize.js"></script>
 <script src="/js/master.js"></script>
     <div class="searcher">
     <div class="form-wrapper">
