--- a/src/html/profile.html
+++ b/src/html/profile.html
@@ -78,6 +78,7 @@
                         <textarea class="hidden-input" placeholder="Коротко о себе">Обычная художница из южной столицы нашей необъятной Родины. Предпочитаю писать картины маслом на холсте, иногда эксперементирую в области материалов – в частности очень понравился уголь, и патель – очень мягкие и податливые материалы, мягкость порождает необходимость зафиксировать материал, вобщем – в постоянном творческом поиске))</textarea>
                     </div>
                     <div class="col s12 right-align">
+                        <a href="" class="btn btn-red left">Удалить профиль</span></a>
                         <a href="" class="btn btn-flat">Изменить <span class="gold-text">пароль</span></a>
                         <a href="" class="btn" id="saver">Редактировать <span class="gold-text">профиль</span></a>
                     </div>
