--- a/release/creators.html
+++ b/release/creators.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/master.css">
-<title>Страница регистрации</title>
+<title>Страница продукта</title>
 </head>
 <body>
     <header>
@@ -78,97 +78,113 @@
         </ul>
     </li>
 </ul>
-    <div class="global-wrapper" id="register">
-        <section id="page-header">
+    <div class="global-wrapper" id="creators">
+        <section id="main-data">
             <div class="container">
                 <div class="row">
                     <div class="col s12">
-                        <h1>Регистрация пользователя</h1>
+                        <h1>О создателях</h1>
                     </div>
                 </div>
-            </div>
-        </section>
-        <section id="form-data">
-            <div class="container">
                 <div class="row">
-                    <div class="col l4 m6 s12">
-                        <form action="" id="register">
-                            <div class="avatar-holder">
-                                <input type="file" name="avatar" id="avatar-file-selector">
-                                <label for="avatar-file-selector" class="avatar lazy" data-src="/img/no-photo.png">
-                                    <div class="overlay">
-                                        <i class="mdi mdi-camera"></i>
-                                    </div>
-                                </label>
-                                <label class="filename-wrapper">
-                                    <span id="filename"></span>
-                                </label>
-                            </div>
-                            <div class="input-field-check"><input class="styled" checked type="radio" name="profile-type" id="artist"><label for="artist">Художник</label></div>
-                            <div class="input-field-check"><input class="styled" type="radio" name="profile-type" id="customer"><label for="customer">Покупатель</label></div>
-                            <!-- Город не выбран -->
-                            <div>
-                                <a href="#city-selector" class="btn btn-flat modal-trigger" id="city-selector-trigger">
-                                    <span id="prompt">Выбрать город</span>
-                                    <span id="selected-city" class="hidden">
-                                        <i id="region">Краснодарский край</i>, 
-                                        <i id="city">Краснодар</i>
+                    <div class="col xl3 l4 m6 s12">
+                        <a href="https://instagram.com/olga_kononovich" class="insta-photo" target="_blank" rel="nofollow" >
+                            <span class="photo-wrapper">
+                                <span class="front lazy" data-src="/img/olga_kononovich.jpg"></span>
+                                <span class="back-wrapper">
+                                    <span class="back">
+                                        <span class="back-content">
+                                            <i class="mdi mdi-instagram"></i>
+                                            <span class="name">@olga_kononovich</span>
+                                        </span>
                                     </span>
-                                </a>
-                            </div>
-                            <!-- / -->
-                            <!-- Город выбран -->
-                            <!-- <div>
-                                <a href="#city-selector" class="btn btn-flat modal-trigger" id="city-selector-trigger">
-                                    <span id="prompt" class="hidden">Выбрать город</span>
-                                    <span id="selected-city">
-                                        <i id="region">Краснодарский край</i>, 
-                                        <i id="city">Краснодар</i>
-                                    </span>
-                                </a>
-                            </div> -->
-                            <!-- / -->
-                            <div class="input-field"><input class="styled" type="text" placeholder="Фамилия"><label for="">Фамилия</label></div>
-                            <div class="input-field"><input class="styled" type="text" placeholder="Имя"><label for="">Имя</label></div>
-                            <div class="input-field"><input class="styled" type="text" placeholder="Отество"><label for="">Отество</label></div>
-                            <div class="input-field"><input class="styled" type="text" placeholder="Телефон"><label for="">Телефон</label></div>
-                            <div class="input-field"><input class="styled" type="text" placeholder="E-mail"><label for="">E-mail</label></div>
-                            <div class="input-field-check"><input class="styled" type="checkbox" id="agreement"><label for="agreement">Я прочел, и согласен с условиями <a href="">Пользовательского соглашения</a></label></div>
-                            <div class="input-field-check"><input class="styled" type="checkbox" id="policy"><label for="policy">Я прочел, и согласен с <a href="">Политикой обработки персональных данных</a></label></div>
-                            <div class="input-field-check"><input class="styled" type="checkbox" id="rules"><label for="rules">Я прочел, и согласен с <a href="">Правилами пользования сайтом</a></label></div>
-                            <div>
-                                <input type="reset" class="btn btn-flat" value="Сброс" />
-                                <a href="" class="btn right">Зарегистрироваться</a>
-                            </div>
-                        </form>
+                                </span>
+                            </span>
+                            <span class="name">
+                                <i class="mdi mdi-instagram"></i>
+                                <span>Ольга Кононович</span>
+                                <span class="description">
+                                    независимый художник, основатель и руководитель брендингового агентства
+                                </span>
+                            </span>
+                        </a>
                     </div>
-                    <div class="col l6 offset-l2 m6 s12">
-                        <h3>Для чего нужна регистрация?</h3>
+                    <div class="col l4 offset-xl1 m6 s12">
                         <p>
-                            Регистрируясь на сайте, пользователь получает уникальную возможность как общаться напрямую с авторами картин, представленных 
-                            на сайте, так и самому зарегистрировавшись в качестве автора, выкладывать свои работы, общаться с авторами других картин, 
-                            отслеживать их процесс, появление новых работ и многое другое. 
+                            Я не художник, но хочу быть причастной к искусству :). 
+                            Я работаю в сфере маркетинга и брендинга, создаю сайты и совершенствую работу компаний 
+                            от продукта до команды. С Лидой мы познакомились в 2013 году. Я просто решила попробовать 
+                            написать картину маслом. С того момента прошло уже много лет, реализовано огромное число идей 
+                            и написано немало картин.
                         </p>
                         <p>
-                            Зарегистрировавшись в качестве покупателя, пользователь имеет возможность связаться с автором по вопросу приобретения 
-                            понравившейся картины, либо попросить автора нарисовать картину на заказ, получив таким образом абсолютный эксклюзив,
-                            как для себя, так и в качестве подарка своим близким и родным людям.
+                            Galerist — проект для таких как я и для профессионалов, здесь каждый может показать свои результаты. 
+                            Художников-любителей достаточно много: днём мы работаем в офисе, а вечером и по выходным — создаём 
+                            новые шедевры ))). Если это увлечение остаётся, то через какой-то период времени картин становится 
+                            много и хочется определить их судьбу.
+                        </p>
+                    </div>
+                    <div class="col l4 m12">
+                        <p>
+                            Платформа Galerist – поможет в реализации планов как создателей картин, так и ценителей: всегда можно 
+                            обратиться к автору за понравившейся работой.
                         </p>
                         <p>
-                            Человек, зарегистрировавшийся на сайте получает множество прав, но вместе с ними и множество обязанностей, в частности,
-                            он должен принять <a href="">Политику обработки персональных данных</a>, <a href="">Пользовательское соглашение</a>,
-                            и <a href="">Правила пользования сайтом</a>, соблюдать нормы приличия, не оскорблять других пользователей сайта,
-                            не заниматься рассылкой СПАМ'а и не флудить.
+                            Все наши активности направлены на развитие творчества и возможностей людей. В этом проекте есть большое будущее. 
+                            Присоединяйтесь и давайте развивать вместе творческую среду!
                         </p>
                         <p>
-                            Замеченные в подобного рода деятельности будут лишены доступа к сайту, и заблокированы после несоблюдения первого предупреждения со стороны Администрации
-                            сайта, и потеряют доступ к личному кабинету, а как следствие ко всей истории переписок, своим работам, и прочими удобствами,
-                            предоставляемыми личным кабинетом в срок, определяемой Администрацией.
+                            Искусство рождается в каждом… человеке, моменте, городе, событии – во всём.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col xl3 l4 m6 s12">
+                        <a href="https://instagram.com/lidiya_arttime" class="insta-photo" target="_blank" rel="nofollow" >
+                            <span class="photo-wrapper">
+                                <span class="front lazy" data-src="/img/lidia_soboleva.jpg"></span>
+                                <span class="back-wrapper">
+                                    <span class="back">
+                                        <span class="back-content">
+                                            <i class="mdi mdi-instagram"></i>
+                                            <span class="name">@lidiya_arttime</span>
+                                        </span>
+                                    </span>
+                                </span>
+                            </span>
+                            <span class="name">
+                                <i class="mdi mdi-instagram"></i><span>Лидия Соболева</span>
+                                <span class="description">
+                                    художник, руководитель студии, преподаватель живописи
+                                </span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col l4 offset-xl1 m6 s12">
+                        <p>
+                            Я уже в 14 лет знала, что буду художником. В то время я много и уверенно писала картины. Меня заметил 
+                            Георгий Иванович Митрофанов и предложил мне учиться у него. Как раз с этого момента я погрузилась 
+                            в настоящую жизнь художника. Те навыки, которые я получила, обучаясь у Георгия Иваниовича, помогли мне 
+                            войти в профессиональный художественный мир
                         </p>
                         <p>
-                            Для восстановления доступа к сайту, пользователю будет необходимо связаться с Администрацией сайта, и восстановить доступ
-                            после того, как будут устранены как сами неприемлимые действия, так и их последствия. В дальнейшем Администрация оставляет за собой
-                            право перманентного удаления личных данных пользователей, злостно нарушающих правила пользования сайтом.
+                            Я почти сразу стала получать заказы. Работала очень много. Отправляла свои картины по всей России. 
+                            И есть даже несколько работ в частных коллекциях за рубежом. Когда я пишу на заказ, для меня 
+                            становится приоритетным решение главной задачи — понять мир заказчика и создать такую картину, 
+                            которая станет частью именно этого мира. Картина - это очень личное. Сотни людей могут смотреть 
+                            на нее, но откроется она для единиц. 
+                        </p>
+                    </div>
+                    <div class="col l4 m12">
+                        <p>
+                            В 2014 году я приняла решение открыть художественную студию «Арт-Тайм». Я использую свою методику 
+                            преподавания. Все, что я узнала и прочувствовала на себе за многие годы практики, теперь передаю 
+                            людям, которые приходят ко мне в студию. 
+                        </p>
+                        <p>
+                            Верю в то, что все, что с нами происходит - результат нашего действия или бездействия. Это одновременно 
+                            и усложняет, и облегчает жизнь. Лично мне нравится осознавать, что моя жизнь – это дело моих рук и моих 
+                            трудов. Как и мои картины. И я вольна рисовать все, что захочу.
                         </p>
                     </div>
                 </div>
