--- a/src/html/parts/navi.html
+++ b/src/html/parts/navi.html
@@ -5,6 +5,7 @@
             <li><a href="/">Главная</a></li>
             <li><a href="/gallery.html">Галерея</a></li>
             <li><a href="/authors.html">Авторы</a></li>
+            <li><a href="/creators.html">О создателях</a></li>
             <li>
                 <a href="" class="events">Мероприятия</a>
                 <ul>
@@ -54,6 +55,7 @@
     <li><a href="/">Главная</a></li>
     <li><a href="/gallery.html">Галерея</a></li>
     <li><a href="/authors.html">Авторы</a></li>
+    <li><a href="/creators.html">О создателях</a></li>
     <li class="folder">
         <a>Мероприятия</a>
         <ul>
