--- a/release/product.html
+++ b/release/product.html
@@ -18,6 +18,7 @@
             <li><a href="/">Главная</a></li>
             <li><a href="/gallery.html">Галерея</a></li>
             <li><a href="/authors.html">Авторы</a></li>
+            <li><a href="/creators.html">О создателях</a></li>
             <li>
                 <a href="" class="events">Мероприятия</a>
                 <ul>
@@ -67,6 +68,7 @@
     <li><a href="/">Главная</a></li>
     <li><a href="/gallery.html">Галерея</a></li>
     <li><a href="/authors.html">Авторы</a></li>
+    <li><a href="/creators.html">О создателях</a></li>
     <li class="folder">
         <a>Мероприятия</a>
         <ul>
