Редактор, footer и favico

--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -8,8 +8,8 @@
         </div>
         <div class="footer-main">
             <div class="row flex">
-                <div class="col m4">
-                    <ul>
+                <div class="col m12 menu-wrapper">
+                    <ul class="footer-menu">
                         <li><a href="">Главная</a></li>
                         <li><a href="">Галерея</a></li>
                         <li><a href="">Авторы</a></li>
@@ -19,46 +19,10 @@
                         <li><a href="">Пользовательское соглашение</a></li>
                     </ul>
                 </div>
-                <div class="col m8 s12">
-                    <!-- Данные еще не отправлены -->
-                    <div class="row">
-                        <div class="col s12">
-                            <div class="form-header">Обратная связь</div>
-                        </div>
-                        <div class="col m6 s12">
-                            <div class="input-field">
-                                <input type="text" class="styled" placeholder="Имя, Фамилия">
-                                <div class="error">Недопустимые символы в имени</div>
-                                <label for="">Пожалуйста представьтесь</label>
-                            </div>
-                        </div>
-                        <div class="col m6 s12">
-                            <div class="input-field">
-                                <input type="text" class="styled" placeholder="+7 123 456-7890">
-                                <div class="error">Неверный формат</div>
-                                <label for="">Телефон</label>
-                            </div>
-                        </div>
-                        <div class="col s12">
-                            <div class="input-field">
-                                <textarea name="" class="styled" id="" cols="30" rows="0" placeholder="Что Вас интересует?"></textarea>
-                                <div class="error">Поле не должно быть пустым</div>
-                                <label for="">Сообщение</label>
-                            </div>
-                            <div class="buttons-wrapper">
-                                <a href="" class="btn"><span class="white-text">Отправить</span><span class="gold-text"> сообщение</span></a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- / -->
-                    <!-- Данные успешно отправлены -->
-                    <div class="footer-success center-align hidden">
-                        <p>
-                            <i class="mdi mdi-check-circle green-text"></i>
-                        </p>
-                        <p>Ваше сообщение успешно отправлено</p>
-                    </div>
-                    <!-- / -->
+                <div class="col s12 center-align">
+                    <a href="#feedback" class="btn modal-trigger">
+                        <span class="white-text">Написать</span> <span class="gold-text">администратору</span>
+                    </a>
                 </div>
             </div>
         </div>
