--- a/release/18_debug.html
+++ b/release/18_debug.html
@@ -286,24 +286,85 @@
                     <span class="subheader">режим редактирования</span>
                 </h1>
             </div>
-            <div class="col m8">
-                <div class="edit-image-img">
-                    <img id="image" src="/img/ignore/b425gm9jxicz20a.jpg">
+        </div>
+        <div class="row flex">
+            <div class="col l8 m10 s10 xs10">
+                <div class="edit-image-wrapper">
+
+                    <div class="edit-image-img">
+                        <img id="image" src="/img/ignore/b425gm9jxicz20a.jpg" class="responsive-img">
+                    </div>
+
+                    <div class="edit-image-controls">
+                        <div class="edit-control" id="zoom">
+                            <div class="min-wrapper"><a href=""><i class="mdi mdi-magnify-minus-outline"></i></a></div>
+                            <div class="range-wrapper">
+                                <input type="range" min="-180" max="180" step="10" id="image-degree">
+                            </div>
+                            <div class="max-wrapper"><a href=""><i class="mdi mdi-magnify-plus-outline"></i></a></div>
+                        </div>
+                        <div class="edit-control" id="rotate">
+                            <div class="min-wrapper"><a href=""><i class="mdi mdi-rotate-left"></i></a></div>
+                            <div class="range-wrapper">
+                                <input type="range" min="-180" max="180" step="10" id="image-degree">
+                            </div>
+                            <div class="max-wrapper"><a href=""><i class="mdi mdi-rotate-right"></i></a></div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col m4">
-                <div>
-                    <i class="mdi mdi-rotate-right"></i>
-                    <input type="range" min="-180" max="180" step="10" id="image-degree">
+            <div class="col l4">
+                <div class="thumbnails-wrapper">
+                    <div class="thumbnail-entry ">
+    <div class="thumbnail-image lazy" data-src="/img/gallery/belle.jpg"></div>
+</div><div class="thumbnail-entry ">
+    <div class="thumbnail-image lazy" data-src="/img/gallery/blue-flower.jpg"></div>
+</div><div class="thumbnail-entry ">
+    <div class="thumbnail-image lazy" data-src="/img/gallery/flower-infinity.jpg"></div>
+</div><div class="thumbnail-entry ">
+    <div class="thumbnail-image lazy" data-src="/img/gallery/friday-evening.jpg"></div>
+</div><div class="thumbnail-entry ">
+    <div class="thumbnail-image lazy" data-src="/img/gallery/kitty.jpg"></div>
+</div><div class="thumbnail-entry active">
+    <div class="thumbnail-image lazy" data-src="/img/gallery/lime.jpg"></div>
+</div><div class="thumbnail-entry ">
+    <div class="thumbnail-image lazy" data-src="/img/gallery/lotus.jpg"></div>
+</div><div class="thumbnail-entry ">
+    <div class="thumbnail-image lazy" data-src="/img/gallery/mistery_island.jpg"></div>
+</div><div class="thumbnail-entry ">
+    <div class="thumbnail-image lazy" data-src="/img/gallery/narcis.jpg"></div>
+</div><div class="thumbnail-entry ">
+    <div class="thumbnail-image lazy" data-src="/img/gallery/naturemort.jpg"></div>
+</div><div class="thumbnail-entry ">
+    <div class="thumbnail-image lazy" data-src="/img/gallery/piano.jpg"></div>
+</div><div class="thumbnail-entry ">
+    <div class="thumbnail-image lazy" data-src="/img/gallery/pomegranate.jpg"></div>
+</div>
+
+                    <div class="edit-image-controls">
+                        <div class="edit-control" id="zoom">
+                            <div class="min-wrapper"><a href=""><i class="mdi mdi-magnify-minus-outline"></i></a></div>
+                            <div class="range-wrapper">
+                                <input type="range" min="-180" max="180" step="10" id="image-degree">
+                            </div>
+                            <div class="max-wrapper"><a href=""><i class="mdi mdi-magnify-plus-outline"></i></a></div>
+                        </div>
+                        <div class="edit-control" id="rotate">
+                            <div class="min-wrapper"><a href=""><i class="mdi mdi-rotate-left"></i></a></div>
+                            <div class="range-wrapper">
+                                <input type="range" min="-180" max="180" step="10" id="image-degree">
+                            </div>
+                            <div class="max-wrapper"><a href=""><i class="mdi mdi-rotate-right"></i></a></div>
+                        </div>
+                    </div>
                 </div>
-                <div class="manual-rotate center-align">
-                    <a id="rotate-left" class="btn btn-flat"><i class="mdi mdi-rotate-left gold-text"></i></a>
-                    <a id="rotate-right" class="btn btn-flat"><i class="mdi mdi-rotate-right gold-text"></i></a>
-                </div>
-                <div>
-                    <i class="mdi mdi-magnify-plus-outline"></i>
-                    <input type="range" min="0" max="2" step=".01" id="image-scale">
-                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col s12 right-align">
                 <div class="edit-image-actions">
                     <a id="reset-edited" data-url="/editimage/?Act=saveEditedImage" class="btn">
                         <span>Сброс</span>
@@ -325,54 +386,31 @@
     <a class="floating-action-button crud-add" href="http://galerist.local/admin/gallerist-picturectrl/?dir=1&amp;do=add">
         <i class="mdi mdi-cloud-upload"></i>
     </a>
+<a class="floating-action-button">
+    <i class="mdi mdi-cloud-upload"></i>
+</a>
 <footer>
     <div class="container">
         <div class="logo-wrapper">
             <div class="logo"></div>
         </div>
         <div class="footer-main">
-            <div class="row">
-                <div class="col m4">
-                    <ul>
-                        <li><a href="http://galerist.local/editimage/18">Главная</a></li>
-                        <li><a href="http://galerist.local/editimage/18">Галерея</a></li>
-                        <li><a href="http://galerist.local/editimage/18">Авторы</a></li>
-                        <li><a href="http://galerist.local/editimage/18">Мероприятия</a></li>
-                        <li><a href="http://galerist.local/editimage/18">Контакты</a></li>
-                        <li><a href="http://galerist.local/editimage/18">Политика конфиденциальности</a></li>
-                        <li><a href="http://galerist.local/editimage/18">Пользовательское соглашение</a></li>
+            <div class="row flex">
+                <div class="col m12 menu-wrapper">
+                    <ul class="footer-menu">
+                        <li><a href="">Главная</a></li>
+                        <li><a href="">Галерея</a></li>
+                        <li><a href="">Авторы</a></li>
+                        <li><a href="">Мероприятия</a></li>
+                        <li><a href="">Контакты</a></li>
+                        <li><a href="">Политика конфиденциальности</a></li>
+                        <li><a href="">Пользовательское соглашение</a></li>
                     </ul>
                 </div>
-                <div class="col m8 s12">
-                    <div class="row">
-                        <div class="col s12">
-                            <div class="form-header">Обратная связь</div>
-                        </div>
-                        <div class="col m6 s12">
-                            <div class="input-field">
-                                <input type="text" placeholder="Имя, Фамилия">
-                                <div class="error">Недопустимые символы в имени</div>
-                                <label for="" class="active">Пожалуйста представьтесь</label>
-                            </div>
-                        </div>
-                        <div class="col m6 s12">
-                            <div class="input-field">
-                                <input type="text" placeholder="+7 123 456-7890">
-                                <div class="error">Неверный формат</div>
-                                <label for="" class="active">Телефон</label>
-                            </div>
-                        </div>
-                        <div class="col s12">
-                            <div class="input-field">
-                                <textarea name="" id="" cols="30" rows="0" placeholder="Что Вас интересует?"></textarea>
-                                <div class="error">Поле не должно быть пустым</div>
-                                <label for="" class="active">Сообщение</label>
-                            </div>
-                            <div class="buttons-wrapper">
-                                <a href="http://galerist.local/editimage/18" class="btn"><span class="white-text">Отправить</span><span class="gold-text"> сообщение</span></a>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col s12 center-align">
+                    <a href="#feedback" class="btn modal-trigger">
+                        <span class="white-text">Написать</span> <span class="gold-text">администратору</span>
+                    </a>
                 </div>
             </div>
         </div>
