--- a/release/index.html
+++ b/release/index.html
@@ -8,6 +8,17 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/master.css">
+
+<link rel="apple-touch-icon" sizes="180x180" href="/img/favico/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/img/favico/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/img/favico/favicon-16x16.png">
+<link rel="manifest" href="/img/favico/site.webmanifest">
+<link rel="mask-icon" href="/img/favico/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/img/favico/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="/img/favico/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+
 <title>Главная</title>
 </head>
 <body>
@@ -1341,8 +1352,8 @@
         </div>
         <div class="footer-main">
             <div class="row flex">
-                <div class="col m4">
-                    <ul>
+                <div class="col m12 menu-wrapper">
+                    <ul class="footer-menu">
                         <li><a href="">Главная</a></li>
                         <li><a href="">Галерея</a></li>
                         <li><a href="">Авторы</a></li>
@@ -1352,46 +1363,10 @@
                         <li><a href="">Пользовательское соглашение</a></li>
                     </ul>
                 </div>
-                <div class="col m8 s12">
-                    <!-- Данные еще не отправлены -->
-                    <div class="row">
-                        <div class="col s12">
-                            <div class="form-header">Обратная связь</div>
-                        </div>
-                        <div class="col m6 s12">
-                            <div class="input-field">
-                                <input type="text" class="styled" placeholder="Имя, Фамилия">
-                                <div class="error">Недопустимые символы в имени</div>
-                                <label for="">Пожалуйста представьтесь</label>
-                            </div>
-                        </div>
-                        <div class="col m6 s12">
-                            <div class="input-field">
-                                <input type="text" class="styled" placeholder="+7 123 456-7890">
-                                <div class="error">Неверный формат</div>
-                                <label for="">Телефон</label>
-                            </div>
-                        </div>
-                        <div class="col s12">
-                            <div class="input-field">
-                                <textarea name="" class="styled" id="" cols="30" rows="0" placeholder="Что Вас интересует?"></textarea>
-                                <div class="error">Поле не должно быть пустым</div>
-                                <label for="">Сообщение</label>
-                            </div>
-                            <div class="buttons-wrapper">
-                                <a href="" class="btn"><span class="white-text">Отправить</span><span class="gold-text"> сообщение</span></a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- / -->
-                    <!-- Данные успешно отправлены -->
-                    <div class="footer-success center-align hidden">
-                        <p>
-                            <i class="mdi mdi-check-circle green-text"></i>
-                        </p>
-                        <p>Ваше сообщение успешно отправлено</p>
-                    </div>
-                    <!-- / -->
+                <div class="col s12 center-align">
+                    <a href="#feedback" class="btn modal-trigger">
+                        <span class="white-text">Написать</span> <span class="gold-text">администратору</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -1466,6 +1441,41 @@
         </div>
         <div class="modal-actions">
             <a href="" class="btn btn-flat">Закрыть</a><a href="" class="btn btn right">Принять</a>
+        </div>
+    </div>
+</div>
+<div class="modal" id="feedback">
+    <div class="modal-content">
+        <div class="modal-header">Письмо администратору</div>
+        <div class="row">
+            <div class="col s12">
+                <div class="form-header">Обратная связь</div>
+            </div>
+            <div class="col m6 s12">
+                <div class="input-field">
+                    <input type="text" class="styled" placeholder="Имя, Фамилия">
+                    <div class="error">Недопустимые символы в имени</div>
+                    <label for="">Пожалуйста представьтесь</label>
+                </div>
+            </div>
+            <div class="col m6 s12">
+                <div class="input-field">
+                    <input type="text" class="styled" placeholder="+7 123 456-7890">
+                    <div class="error">Неверный формат</div>
+                    <label for="">Телефон</label>
+                </div>
+            </div>
+            <div class="col s12">
+                <div class="input-field">
+                    <textarea name="" class="styled autosize" id="" cols="30" rows="1" placeholder="Что Вас интересует?"></textarea>
+                    <div class="error">Поле не должно быть пустым</div>
+                    <label for="">Сообщение</label>
+                </div>
+            </div>
+        </div>
+        <div class="modal-actions">
+            <a class="btn btn-flat modal-close">Закрыть</a>
+            <a href="" class="btn right"><span class="white-text">Отправить</span><span class="gold-text"> сообщение</span></a>
         </div>
     </div>
 </div>
