--- a/release/profile.html
+++ b/release/profile.html
@@ -8,6 +8,17 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/master.css">
+
+<link rel="apple-touch-icon" sizes="180x180" href="/img/favico/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/img/favico/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/img/favico/favicon-16x16.png">
+<link rel="manifest" href="/img/favico/site.webmanifest">
+<link rel="mask-icon" href="/img/favico/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/img/favico/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="/img/favico/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+
 <title>Кабинет пользователя</title>
 </head>
 <body>
@@ -183,7 +194,7 @@
     <div class="size">100x60x3 см</div>
     <div class="price">12 000₽</div>
     <div class="actions">
-        <a href="" class="edit"><i class="mdi mdi-pen"></i></a>
+        <a href="/18_debug.html" class="edit"><i class="mdi mdi-pen"></i></a>
         <a href="" class="publish-indicator inactive"><i></i></a>
     </div>
 </div><div class="profile-gallery-entry inactive">
@@ -196,7 +207,7 @@
     <div class="size">60x100x3 см</div>
     <div class="price">8 000₽</div>
     <div class="actions">
-        <a href="" class="edit"><i class="mdi mdi-pen"></i></a>
+        <a href="/18_debug.html" class="edit"><i class="mdi mdi-pen"></i></a>
         <a href="" class="publish-indicator inactive"><i></i></a>
     </div>
 </div><div class="profile-gallery-entry inactive">
@@ -209,7 +220,7 @@
     <div class="size">100x60x3 см</div>
     <div class="price">4 000₽</div>
     <div class="actions">
-        <a href="" class="edit"><i class="mdi mdi-pen"></i></a>
+        <a href="/18_debug.html" class="edit"><i class="mdi mdi-pen"></i></a>
         <a href="" class="publish-indicator inactive"><i></i></a>
     </div>
 </div><div class="profile-gallery-entry inactive">
@@ -222,7 +233,7 @@
     <div class="size">60x100x3 см</div>
     <div class="price">80 000₽</div>
     <div class="actions">
-        <a href="" class="edit"><i class="mdi mdi-pen"></i></a>
+        <a href="/18_debug.html" class="edit"><i class="mdi mdi-pen"></i></a>
         <a href="" class="publish-indicator inactive"><i></i></a>
     </div>
 </div><div class="profile-gallery-entry ">
@@ -235,7 +246,7 @@
     <div class="size">100x60x3 см</div>
     <div class="price">12 000₽</div>
     <div class="actions">
-        <a href="" class="edit"><i class="mdi mdi-pen"></i></a>
+        <a href="/18_debug.html" class="edit"><i class="mdi mdi-pen"></i></a>
         <a href="" class="publish-indicator inactive"><i></i></a>
     </div>
 </div><div class="profile-gallery-entry ">
@@ -248,7 +259,7 @@
     <div class="size">60x100x3 см</div>
     <div class="price">14 000₽</div>
     <div class="actions">
-        <a href="" class="edit"><i class="mdi mdi-pen"></i></a>
+        <a href="/18_debug.html" class="edit"><i class="mdi mdi-pen"></i></a>
         <a href="" class="publish-indicator inactive"><i></i></a>
     </div>
 </div><div class="profile-gallery-entry selected">
@@ -261,7 +272,7 @@
     <div class="size">100x60x3 см</div>
     <div class="price">3 500₽</div>
     <div class="actions">
-        <a href="" class="edit"><i class="mdi mdi-pen"></i></a>
+        <a href="/18_debug.html" class="edit"><i class="mdi mdi-pen"></i></a>
         <a href="" class="publish-indicator inactive"><i></i></a>
     </div>
 </div><div class="profile-gallery-entry ">
@@ -274,7 +285,7 @@
     <div class="size">60x100x3 см</div>
     <div class="price">12 000₽</div>
     <div class="actions">
-        <a href="" class="edit"><i class="mdi mdi-pen"></i></a>
+        <a href="/18_debug.html" class="edit"><i class="mdi mdi-pen"></i></a>
         <a href="" class="publish-indicator inactive"><i></i></a>
     </div>
 </div><div class="profile-gallery-entry ">
@@ -287,7 +298,7 @@
     <div class="size">60x100x3 см</div>
     <div class="price">3 000₽</div>
     <div class="actions">
-        <a href="" class="edit"><i class="mdi mdi-pen"></i></a>
+        <a href="/18_debug.html" class="edit"><i class="mdi mdi-pen"></i></a>
         <a href="" class="publish-indicator inactive"><i></i></a>
     </div>
 </div><div class="profile-gallery-entry ">
@@ -300,7 +311,7 @@
     <div class="size">100x60x3 см</div>
     <div class="price">4 000₽</div>
     <div class="actions">
-        <a href="" class="edit"><i class="mdi mdi-pen"></i></a>
+        <a href="/18_debug.html" class="edit"><i class="mdi mdi-pen"></i></a>
         <a href="" class="publish-indicator inactive"><i></i></a>
     </div>
 </div><div class="profile-gallery-entry ">
@@ -313,7 +324,7 @@
     <div class="size">60x100x3 см</div>
     <div class="price">6 000₽</div>
     <div class="actions">
-        <a href="" class="edit"><i class="mdi mdi-pen"></i></a>
+        <a href="/18_debug.html" class="edit"><i class="mdi mdi-pen"></i></a>
         <a href="" class="publish-indicator inactive"><i></i></a>
     </div>
 </div><div class="profile-gallery-entry ">
@@ -326,7 +337,7 @@
     <div class="size">100x60x3 см</div>
     <div class="price">6 000₽</div>
     <div class="actions">
-        <a href="" class="edit"><i class="mdi mdi-pen"></i></a>
+        <a href="/18_debug.html" class="edit"><i class="mdi mdi-pen"></i></a>
         <a href="" class="publish-indicator inactive"><i></i></a>
     </div>
 </div>
@@ -646,8 +657,8 @@
         </div>
         <div class="footer-main">
             <div class="row flex">
-                <div class="col m4">
-                    <ul>
+                <div class="col m12 menu-wrapper">
+                    <ul class="footer-menu">
                         <li><a href="">Главная</a></li>
                         <li><a href="">Галерея</a></li>
                         <li><a href="">Авторы</a></li>
@@ -657,46 +668,10 @@
                         <li><a href="">Пользовательское соглашение</a></li>
                     </ul>
                 </div>
-                <div class="col m8 s12">
-                    <!-- Данные еще не отправлены -->
-                    <div class="row">
-                        <div class="col s12">
-                            <div class="form-header">Обратная связь</div>
-                        </div>
-                        <div class="col m6 s12">
-                            <div class="input-field">
-                                <input type="text" class="styled" placeholder="Имя, Фамилия">
-                                <div class="error">Недопустимые символы в имени</div>
-                                <label for="">Пожалуйста представьтесь</label>
-                            </div>
-                        </div>
-                        <div class="col m6 s12">
-                            <div class="input-field">
-                                <input type="text" class="styled" placeholder="+7 123 456-7890">
-                                <div class="error">Неверный формат</div>
-                                <label for="">Телефон</label>
-                            </div>
-                        </div>
-                        <div class="col s12">
-                            <div class="input-field">
-                                <textarea name="" class="styled" id="" cols="30" rows="0" placeholder="Что Вас интересует?"></textarea>
-                                <div class="error">Поле не должно быть пустым</div>
-                                <label for="">Сообщение</label>
-                            </div>
-                            <div class="buttons-wrapper">
-                                <a href="" class="btn"><span class="white-text">Отправить</span><span class="gold-text"> сообщение</span></a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- / -->
-                    <!-- Данные успешно отправлены -->
-                    <div class="footer-success center-align hidden">
-                        <p>
-                            <i class="mdi mdi-check-circle green-text"></i>
-                        </p>
-                        <p>Ваше сообщение успешно отправлено</p>
-                    </div>
-                    <!-- / -->
+                <div class="col s12 center-align">
+                    <a href="#feedback" class="btn modal-trigger">
+                        <span class="white-text">Написать</span> <span class="gold-text">администратору</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -771,6 +746,41 @@
         </div>
         <div class="modal-actions">
             <a href="" class="btn btn-flat">Закрыть</a><a href="" class="btn btn right">Принять</a>
+        </div>
+    </div>
+</div>
+<div class="modal" id="feedback">
+    <div class="modal-content">
+        <div class="modal-header">Письмо администратору</div>
+        <div class="row">
+            <div class="col s12">
+                <div class="form-header">Обратная связь</div>
+            </div>
+            <div class="col m6 s12">
+                <div class="input-field">
+                    <input type="text" class="styled" placeholder="Имя, Фамилия">
+                    <div class="error">Недопустимые символы в имени</div>
+                    <label for="">Пожалуйста представьтесь</label>
+                </div>
+            </div>
+            <div class="col m6 s12">
+                <div class="input-field">
+                    <input type="text" class="styled" placeholder="+7 123 456-7890">
+                    <div class="error">Неверный формат</div>
+                    <label for="">Телефон</label>
+                </div>
+            </div>
+            <div class="col s12">
+                <div class="input-field">
+                    <textarea name="" class="styled autosize" id="" cols="30" rows="1" placeholder="Что Вас интересует?"></textarea>
+                    <div class="error">Поле не должно быть пустым</div>
+                    <label for="">Сообщение</label>
+                </div>
+            </div>
+        </div>
+        <div class="modal-actions">
+            <a class="btn btn-flat modal-close">Закрыть</a>
+            <a href="" class="btn right"><span class="white-text">Отправить</span><span class="gold-text"> сообщение</span></a>
         </div>
     </div>
 </div>
