--- a/src/html/parts/modals.html
+++ b/src/html/parts/modals.html
@@ -66,3 +66,38 @@
         </div>
     </div>
 </div>
+<div class="modal" id="feedback">
+    <div class="modal-content">
+        <div class="modal-header">Письмо администратору</div>
+        <div class="row">
+            <div class="col s12">
+                <div class="form-header">Обратная связь</div>
+            </div>
+            <div class="col m6 s12">
+                <div class="input-field">
+                    <input type="text" class="styled" placeholder="Имя, Фамилия">
+                    <div class="error">Недопустимые символы в имени</div>
+                    <label for="">Пожалуйста представьтесь</label>
+                </div>
+            </div>
+            <div class="col m6 s12">
+                <div class="input-field">
+                    <input type="text" class="styled" placeholder="+7 123 456-7890">
+                    <div class="error">Неверный формат</div>
+                    <label for="">Телефон</label>
+                </div>
+            </div>
+            <div class="col s12">
+                <div class="input-field">
+                    <textarea name="" class="styled autosize" id="" cols="30" rows="1" placeholder="Что Вас интересует?"></textarea>
+                    <div class="error">Поле не должно быть пустым</div>
+                    <label for="">Сообщение</label>
+                </div>
+            </div>
+        </div>
+        <div class="modal-actions">
+            <a class="btn btn-flat modal-close">Закрыть</a>
+            <a href="" class="btn right"><span class="white-text">Отправить</span><span class="gold-text"> сообщение</span></a>
+        </div>
+    </div>
+</div>
