--- a/src/html/parts/profile-gallery-entry.html
+++ b/src/html/parts/profile-gallery-entry.html
@@ -8,7 +8,7 @@
     <div class="size">@@size</div>
     <div class="price">@@price₽</div>
     <div class="actions">
-        <a href="" class="edit"><i class="mdi mdi-pen"></i></a>
+        <a href="/18_debug.html" class="edit"><i class="mdi mdi-pen"></i></a>
         <a href="" class="publish-indicator inactive"><i></i></a>
     </div>
 </div>
